unpackaged/main/default/objects/Opportunity/fields/Acquisition_Type__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Type__c</fullName>
    <label>Acquisition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>MLS</fullName>
            </value>
            <value>
                <fullName>MLS - From Broker</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>REO</fullName>
            </value>
            <value>
                <fullName>Short Sale</fullName>
            </value>
            <value>
                <fullName>Foreclosure</fullName>
            </value>
            <value>
                <fullName>Auction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>