unpackaged/main/default/objects/Opportunity/fields/Adder_Job_Upgrade_Costs__c.field-meta.xml
<CustomField>
    <fullName>Adder_Job_Upgrade_Costs__c</fullName>
    <label>Adder Job Upgrade Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>