unpackaged/main/default/objects/Opportunity/fields/Additional_Alchemy_Products__c.field-meta.xml
<CustomField>
    <fullName>Additional_Alchemy_Products__c</fullName>
    <label>Additional Alchemy Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promo UB6</fullName>
            </value>
            <value>
                <fullName>Promo UB3</fullName>
            </value>
            <value>
                <fullName>Solar Stimulus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>