unpackaged/main/default/objects/Opportunity/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Account.BillingStreet+BR()  +   Account.BillingCity+BR()  +   Account.BillingState+BR()  +  Account.BillingPostalCode+BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>