unpackaged/main/default/objects/Opportunity/fields/Administrator_Contact__c.field-meta.xml
<CustomField>
    <fullName>Administrator_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For the usage by all internal teams, this will ensure that the team is contacting the member of the sales organization that is actually able to action documentation and change orders. This will also limit the</description>
    <inlineHelpText>For the usage by all internal teams, this will ensure that the team is contacting the member of the sales organization that is actually able to action documentation and change orders. This will also limit the</inlineHelpText>
    <label>Administrator Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Administrator Contact)</relationshipLabel>
    <relationshipName>AdministratingOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>