unpackaged/main/default/objects/Opportunity/fields/AHJ_Assumed__c.field-meta.xml
<CustomField>
    <fullName>AHJ_Assumed__c</fullName>
    <label>AHJ Assumed</label>
    <length>60</length>
    <type>Text</type>
</CustomField>