unpackaged/main/default/objects/Opportunity/fields/Alchemy_Contact__c.field-meta.xml
<CustomField>
    <fullName>Alchemy_Contact__c</fullName>
    <label>Alchemy Contact</label>
    <type>Url</type>
</CustomField>