unpackaged/main/default/objects/Opportunity/fields/Alchemy_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Alchemy_User_Type__c</fullName>
    <label>Alchemy User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Sales Organization</fullName>
            </value>
            <value>
                <fullName>Solar Company</fullName>
            </value>
            <value>
                <fullName>Enterprise Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>