unpackaged/main/default/objects/Opportunity/fields/AlchemyBypassLastUnchecked__c.field-meta.xml
<CustomField>
    <fullName>AlchemyBypassLastUnchecked__c</fullName>
    <description>date when the alchemy bypass field was unchecked for design changes</description>
    <label>AlchemyBypassLastUnchecked</label>
    <type>Date</type>
</CustomField>