unpackaged/main/default/objects/Opportunity/fields/Annual_Usage_kwh__c.field-meta.xml
<CustomField>
    <fullName>Annual_Usage_kwh__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Usage kwh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>