unpackaged/main/default/objects/Opportunity/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <inlineHelpText>These fields visible only for legacy.  Use the new combined Appointment Datetime field instead.</inlineHelpText>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>