unpackaged/main/default/objects/Opportunity/fields/Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time__c</fullName>
    <inlineHelpText>These fields visible only for legacy.  Use the new combined Appointment Datetime field instead.</inlineHelpText>
    <label>Appointment Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>