unpackaged/main/default/objects/Opportunity/fields/Array_Tilt_Highest__c.field-meta.xml
<CustomField>
    <fullName>Array_Tilt_Highest__c</fullName>
    <label>Array Tilt (Highest)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>