unpackaged/main/default/objects/Opportunity/fields/Attic_Photos__c.field-meta.xml
<CustomField>
    <fullName>Attic_Photos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attic Photos</label>
    <type>Checkbox</type>
</CustomField>