unpackaged/main/default/objects/Opportunity/fields/Authority_Having_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Authority_Having_Jurisdiction__c</fullName>
    <description>TigerWeb/Alchemy Integrated</description>
    <label>Authority Having Jurisdiction</label>
    <length>120</length>
    <type>Text</type>
</CustomField>