unpackaged/main/default/objects/Opportunity/fields/Battery_Qty__c.field-meta.xml
<CustomField>
    <fullName>Battery_Qty__c</fullName>
    <label>Battery Qty</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>