unpackaged/main/default/objects/Opportunity/fields/Biz_Dev_Oppty_Type__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Oppty_Type__c</fullName>
    <description>Select a Type to categorize business development opportunities. (SetUp&gt; Build&gt;Customize&gt;Field)</description>
    <label>Biz Dev Oppty Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition - Other (TBD)</fullName>
            </value>
            <value>
                <fullName>Acquisition - Solar Corporate</fullName>
            </value>
            <value>
                <fullName>Acquisition - Solar Projects</fullName>
            </value>
            <value>
                <fullName>Capital Allocation - Project Finance - Commercial Strategic</fullName>
            </value>
            <value>
                <fullName>Capital Allocation - Project Finance - Other</fullName>
            </value>
            <value>
                <fullName>Capital Allocation - Project Finance - Project Friday</fullName>
            </value>
            <value>
                <fullName>Capital Raise - A1</fullName>
            </value>
            <value>
                <fullName>Capital Raise - A2</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Accelerate</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Corporate Finance - Debt</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Corporate Finance - Facility</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Corporate Finance - Series A</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Corporate Finance - Series B</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Corporate Finance - Series C</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Corporate Finance - Tech Co</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Other (TBD)</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Property Fund # 6 - Debt</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Property Fund # 7 - Debt</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Property Fund #7 - Equity</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Property Fund # 8 - Institutional</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Property Fund #N - Refinance</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Tax Equity Fund - Debt</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Tax Equity Fund - Equity</fullName>
            </value>
            <value>
                <fullName>Capital Raise - Tax Equity Fund - Tax Equity</fullName>
            </value>
            <value>
                <fullName>Major Account - MFR REIT</fullName>
            </value>
            <value>
                <fullName>Major Account - Other</fullName>
            </value>
            <value>
                <fullName>Major Account - SFR REIT</fullName>
            </value>
            <value>
                <fullName>Strategic Partner - Sales &amp; Marketing Distribution</fullName>
            </value>
            <value>
                <fullName>Strategic Partner - Tech Co Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>