unpackaged/main/default/objects/Opportunity/fields/Build_Accelerate_Fee__c.field-meta.xml
<CustomField>
    <fullName>Build_Accelerate_Fee__c</fullName>
    <label>Build Accelerate Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>