unpackaged/main/default/objects/Opportunity/fields/Build_Accelerate_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Build_Accelerate_Requested_Date__c</fullName>
    <label>Build Accelerate Requested Date</label>
    <type>Date</type>
</CustomField>