unpackaged/main/default/objects/Opportunity/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Business Account)</relationshipLabel>
    <relationshipName>BusinessAccount</relationshipName>
    <type>Lookup</type>
</CustomField>