unpackaged/main/default/objects/Opportunity/fields/Business_Info_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Business_Info_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Info Checklist</label>
    <type>Checkbox</type>
</CustomField>