unpackaged/main/default/objects/Opportunity/fields/Business_Introduction_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Business_Introduction_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Introduction Agreement</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Business Introduction Agreement)</relationshipLabel>
    <relationshipName>BIA_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>