unpackaged/main/default/objects/Opportunity/fields/Business_License_Fee__c.field-meta.xml
<CustomField>
    <fullName>Business_License_Fee__c</fullName>
    <label>Business License Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>