unpackaged/main/default/objects/Opportunity/fields/CA_Submitted_to_CPF__c.field-meta.xml
<CustomField>
    <fullName>CA_Submitted_to_CPF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CA Submitted to CPF</label>
    <type>Checkbox</type>
</CustomField>