unpackaged/main/default/objects/Opportunity/fields/Cancel_Confirm_Direct_Channel_Sales__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Confirm_Direct_Channel_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Confirm - Direct/Channel Sales</label>
    <type>Checkbox</type>
</CustomField>