unpackaged/main/default/objects/Opportunity/fields/Cancel_Confirm_Operations__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Confirm_Operations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Confirm - Operations</label>
    <type>Checkbox</type>
</CustomField>