unpackaged/main/default/objects/Opportunity/fields/Canvass_Notes__c.field-meta.xml
<CustomField>
    <fullName>Canvass_Notes__c</fullName>
    <label>Needs Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>