unpackaged/main/default/objects/Opportunity/fields/Canvass_Rep__c.field-meta.xml
<CustomField>
    <fullName>Canvass_Rep__c</fullName>
    <label>Canvass Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alex Nelson</fullName>
            </value>
            <value>
                <fullName>Carson Richards</fullName>
            </value>
            <value>
                <fullName>Chaz Williams</fullName>
            </value>
            <value>
                <fullName>Craig Lynberg</fullName>
            </value>
            <value>
                <fullName>Daniel Haller</fullName>
            </value>
            <value>
                <fullName>Ezra Dunbar</fullName>
            </value>
            <value>
                <fullName>Hannah Penlon</fullName>
            </value>
            <value>
                <fullName>Hayden Raabe</fullName>
            </value>
            <value>
                <fullName>Jamerius Summerson</fullName>
            </value>
            <value>
                <fullName>James Brownlee</fullName>
            </value>
            <value>
                <fullName>Jared Keels</fullName>
            </value>
            <value>
                <fullName>John Becker</fullName>
            </value>
            <value>
                <fullName>Joshua Scher</fullName>
            </value>
            <value>
                <fullName>Justin Ainsworth</fullName>
            </value>
            <value>
                <fullName>Kevin Bennett</fullName>
            </value>
            <value>
                <fullName>Lauren Curry</fullName>
            </value>
            <value>
                <fullName>Le Chez Little</fullName>
            </value>
            <value>
                <fullName>Marlon Clemons</fullName>
            </value>
            <value>
                <fullName>Meaghan Buck</fullName>
            </value>
            <value>
                <fullName>Mykal McDermott</fullName>
            </value>
            <value>
                <fullName>Nick Hughes</fullName>
            </value>
            <value>
                <fullName>Omar Figueroa</fullName>
            </value>
            <value>
                <fullName>Patrick Barrett</fullName>
            </value>
            <value>
                <fullName>Rural Arango</fullName>
            </value>
            <value>
                <fullName>Tyler Foxwell</fullName>
            </value>
            <value>
                <fullName>Alfry Dejesus</fullName>
                <isActive>false</isActive>
                <label>Alfry Dejesus</label>
            </value>
            <value>
                <fullName>Brandon Quito</fullName>
                <isActive>false</isActive>
                <label>Brandon Quito</label>
            </value>
            <value>
                <fullName>Daniel Trant</fullName>
                <isActive>false</isActive>
                <label>Daniel Trant</label>
            </value>
            <value>
                <fullName>Emmanuel Melendez</fullName>
                <isActive>false</isActive>
                <label>Emmanuel Melendez</label>
            </value>
            <value>
                <fullName>Erwin Ruiz</fullName>
                <isActive>false</isActive>
                <label>Erwin Ruiz</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>