unpackaged/main/default/objects/Opportunity/fields/CEC_Application_submitted__c.field-meta.xml
<CustomField>
    <fullName>CEC_Application_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CEC Application submitted</label>
    <type>Checkbox</type>
</CustomField>