unpackaged/main/default/objects/Opportunity/fields/CEC_Application_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>CEC_Application_Submitted_Date__c</fullName>
    <label>CEC Application Submitted Date</label>
    <type>Date</type>
</CustomField>