unpackaged/main/default/objects/Opportunity/fields/CEC_Approved__c.field-meta.xml
<CustomField>
    <fullName>CEC_Approved__c</fullName>
    <label>CEC Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>