unpackaged/main/default/objects/Opportunity/fields/CEC_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>CEC_Approved_Date__c</fullName>
    <label>CEC Approved Date</label>
    <type>Date</type>
</CustomField>