unpackaged/main/default/objects/Opportunity/fields/Change_Order_Reason__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Reason__c</fullName>
    <label>Change Order Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation Pending</fullName>
            </value>
            <value>
                <fullName>Sunlight Stip</fullName>
                <label>Contract / Loan Change</label>
            </value>
            <value>
                <fullName>Customer Failing to Action</fullName>
            </value>
            <value>
                <fullName>Customer Delay</fullName>
                <label>Customer Unresponsive</label>
            </value>
            <value>
                <fullName>EE/Offset Discrepancy</fullName>
            </value>
            <value>
                <fullName>Electrical Upgrade Required</fullName>
            </value>
            <value>
                <fullName>Design Change</fullName>
                <label>Engineering / Design Change</label>
            </value>
            <value>
                <fullName>Financier Hard Stipulations</fullName>
            </value>
            <value>
                <fullName>Financier Multiple Hard Stipulations</fullName>
            </value>
            <value>
                <fullName>Financier Soft Stipulation</fullName>
            </value>
            <value>
                <fullName>Financier Stipulation</fullName>
            </value>
            <value>
                <fullName>HOA Denial</fullName>
            </value>
            <value>
                <fullName>Multiple Items to be Addressed</fullName>
            </value>
            <value>
                <fullName>Reroof / Tree Removal Delay</fullName>
                <label>Reroof</label>
            </value>
            <value>
                <fullName>Structural Issues</fullName>
            </value>
            <value>
                <fullName>Sunnova Back End Change</fullName>
            </value>
            <value>
                <fullName>Sunnova Customer Facing Change</fullName>
            </value>
            <value>
                <fullName>Tree Removal Delay</fullName>
            </value>
            <value>
                <fullName>Utility Denial</fullName>
            </value>
            <value>
                <fullName>Virtual Survey Incomplete</fullName>
            </value>
            <value>
                <fullName>Engineer Denial</fullName>
                <isActive>false</isActive>
                <label>Engineer Denial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>