unpackaged/main/default/objects/Opportunity/fields/Change_Order_Redesign_Complete__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Redesign_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Order Redesign Complete</label>
    <type>Checkbox</type>
</CustomField>