unpackaged/main/default/objects/Opportunity/fields/Closed_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Date__c</fullName>
    <description>Date Opportunity moved to Stage Closed Lost</description>
    <label>Closed Lost Date</label>
    <type>Date</type>
</CustomField>