unpackaged/main/default/objects/Opportunity/fields/Commission_Dealer_Fee_Product__c.field-meta.xml
<CustomField>
    <fullName>Commission_Dealer_Fee_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Dealer Fee Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer Fees</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Opportunities (Commission Dealer Fee Product)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>