unpackaged/main/default/objects/Opportunity/fields/Commission_Dealer_Fee_Product_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Dealer_Fee_Product_Rate__c</fullName>
    <formula>Commission_Dealer_Fee_Product2__r.Dealer_Fee_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Dealer Fee Product Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>