unpackaged/main/default/objects/Opportunity/fields/Commissions_Dealer_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Dealer_Fee_Amount__c</fullName>
    <formula>Amount * Commission_Dealer_Fee_Product_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissions Dealer Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>