unpackaged/main/default/objects/Opportunity/fields/Conduit_Run_Through_Attic__c.field-meta.xml
<CustomField>
    <fullName>Conduit_Run_Through_Attic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Conduit run through attic is a $500 adder plus $200 per floor above the first.</inlineHelpText>
    <label>Conduit Run Through Attic</label>
    <type>Checkbox</type>
</CustomField>