unpackaged/main/default/objects/Opportunity/fields/Confirmation_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Call_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation Call Completed</label>
    <type>Checkbox</type>
</CustomField>