unpackaged/main/default/objects/Opportunity/fields/Confirmation_Registration__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Registration__c</fullName>
    <label>Confirmation/Registration #</label>
    <length>60</length>
    <type>Text</type>
</CustomField>