unpackaged/main/default/objects/Opportunity/fields/Consumption_Report_Required__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Report_Required__c</fullName>
    <label>Consumption Report Required</label>
    <type>Date</type>
</CustomField>